<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.multimedia.EntranceActivity"
    tools:showIn="@layout/activity_entrance">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_and_play"
        android:id="@+id/record_and_pay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opengl"
        android:id="@+id/opengl"
        app:layout_constraintTop_toBottomOf="@+id/record_and_pay"
        app:layout_constraintLeft_toLeftOf="@+id/record_and_pay"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_manager"
        android:id="@+id/media_manager"
        app:layout_constraintLeft_toLeftOf="@+id/opengl"
        app:layout_constraintTop_toBottomOf="@+id/opengl"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mix"
        android:text="@string/media_mixture"
        app:layout_constraintTop_toBottomOf="@+id/media_manager"
        app:layout_constraintLeft_toLeftOf="@+id/media_manager"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:id="@+id/record_audio"
        app:layout_constraintLeft_toLeftOf="@+id/mix"
        app:layout_constraintTop_toBottomOf="@+id/mix"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dubbing"
        android:text="@string/dubbing"
        app:layout_constraintLeft_toLeftOf="@id/record_audio"
        app:layout_constraintTop_toBottomOf="@+id/record_audio"/>

</android.support.constraint.ConstraintLayout>
